# SUSTech-2020-Fall-CS205

./: .gitignore  LICENSE  readme.md
Assignment1/: CMakeLists.txt  main.cpp
Assignment2/: BigNumber.cpp  BigNumber.h  CMakeLists.txt  Methods.cpp  Methods.h  Strategies.cpp  Strategies.h  main.cpp
Assignment3/: CMakeLists.txt  main.cpp
Assignment3/include/: openblas_config.h
Assignment3/lib/cmake/openblas/: OpenBLASConfig.cmake
Assignment3/lib/pkgconfig/: openblas.pc
Assignment4/: CMakeLists.txt  main.cpp  makefile
Assignment4/src/: Matrix.cpp  Matrix.hpp
Project1/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  mul_mat.h
Project2/: CMakeLists.txt  main.cpp  timer_local.h
Project2-opt/: CMakeLists.txt  demo.cpp  main.cpp  readme.md  speed_tracker.h
Project2-opt/include/: cnn_param.h  face_detect_cnn.h
Project2-opt/src/: face_binary_cls.cpp  full_cnn.cpp  image_processing.cpp
Project2/include/: cnn_param.h  face_detect_cnn.h  human_detect_cnn.h
Project2/src/: face_binary_cls.cpp  full_cnn.cpp
